Slight modifications and trial run to test in gotitmobiles Github Repo

--- a/about.html
+++ b/about.html
@@ -105,9 +105,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="why.html">Why Us</a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Testimonial</a>
-                </li> -->
               </ul>
             </div>
           </nav>
@@ -133,8 +130,8 @@
               Totam architecto rem beatae veniam, cum officiis adipisci soluta perspiciatis ipsa, expedita maiores quae accusantium. Animi veniam aperiam, necessitatibus mollitia ipsum id optio ipsa odio ab facilis sit labore officia!
               Repellat expedita, deserunt eum soluta rem culpa. Aut, necessitatibus cumque. Voluptas consequuntur vitae aperiam animi sint earum, ex unde cupiditate, molestias dolore quos quas possimus eveniet facilis magnam? Vero, dicta.
             </p>
-            <a href="">
-              Read More
+            <a href="/product.html">
+              Shop Now
             </a>
           </div>
         </div>
@@ -212,11 +209,6 @@
                   Why Us
                 </a>
               </li>
-              <!-- <li>
-                <a href="testimonial.html">
-                  Testimonial
-                </a>
-              </li> -->
             </ul>
           </div>
         </div>
@@ -238,7 +230,7 @@
               <a href="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="https://www.instagram.com/got_it_mobiles/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
               <a href="">
