--- a/index.html
+++ b/index.html
@@ -105,9 +105,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="why.html">Why Us</a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Testimonial</a>
-                </li> -->
               </ul>
             </div>
           </nav>
@@ -128,7 +125,7 @@
                       Welcome to our shop
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste quam velit saepe dolorem deserunt quo quidem ad optio.
+                      Got-it Mobiles welcomes you to exprience the new era of digital revolution. Fullfils all your digital needs.
                     </p>
                     <a href="">
                       Shop Now
@@ -648,11 +645,6 @@
                   Why Us
                 </a>
               </li>
-              <!-- <li>
-                <a href="testimonial.html">
-                  Testimonial
-                </a>
-              </li> -->
             </ul>
           </div>
         </div>
@@ -674,7 +666,7 @@
               <a href="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="https://www.instagram.com/got_it_mobiles/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
               <a href="">
