--- a/product.html
+++ b/product.html
@@ -105,9 +105,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="why.html">Why Us</a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Testimonial</a>
-                </li> -->
               </ul>
             </div>
           </nav>
@@ -464,11 +461,6 @@
                   Why Us
                 </a>
               </li>
-              <!-- <li>
-                <a href="testimonial.html">
-                  Testimonial
-                </a>
-              </li> -->
             </ul>
           </div>
         </div>
@@ -490,7 +482,7 @@
               <a href="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="https://www.instagram.com/got_it_mobiles/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
               <a href="">
