--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
               </h5>
               <div class="product_info">
                 <h5>
-                  <span>₹</span> *
+                  <span>₹</span> XXXXX
                 </h5>
                 <div class="star_container">
                   <i class="fa fa-star" aria-hidden="true"></i>
